# data_engineer_bootcamp

./: .gitignore  README.md
A001/: A001_NOTES.md  a_001.py
A003/: banco_de_podcasts.csv  imoveis.py  main.py  podcast.py
A004/: Dockerfile  ctes.sql  docker-compose.yml  main.py  notes.md
A004/queries/: basic.sql  ctes.sql  deduplicate.sql
A004/web/: index.html
A005/: curriculum.py  main.py  person.py  run.py
A005/Curriculum/: Curriculum.py
A005/LivingBeing/: LivingBeing.py
A005/Person/: Person.py
A005_2/: .flake8  apis.py  ingest.py  ingestors.py  main.py  pyproject.toml  requirements.txt  writer.py
A005_2/mercado_bitcoin/: apis.py  ingestors.py  run.py  writer.py
A005_2/tests/: test_apis.py  test_ingestors.py
A006/: all_movies.py  main.py  nicolas_cage_movies.csv  pyproject.toml  requirements.txt  run.py
A007/: docker-compose.yml  dockerfile  main.py  notes.md  pyproject.toml
A007/exchange/: cambio.csv  main.py
A009/: aws.py  notes.md  pyproject.toml
A010/: notes.md
