[tool.poetry]
name = "a005_2"
version = "0.1.0"
description = ""
authors = ["Clara Battesini <clarabattesini@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.9"
backoff = "^1.11.1"
ratelimit = "^2.2.1"
requests = "^2.27.1"
schedule = "^1.1.0"

[tool.poetry.dev-dependencies]
black = "^22.1.0"
ipython = "^8.1.1"
pytest = "^7.0.1"
flake8 = "^4.0.1"
pre-commit = "^2.17.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
