[tool.poetry]
name = "a006"
version = "0.1.0"
description = "Class 6"
authors = ["Clara Battesini <clarabattesini@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.10"
pandas = "^1.4.1"
selenium = "^4.1.2"
lxml = "^4.8.0"
ipython = "^8.1.1"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
